[gd_scene load_steps=2 format=3 uid="uid://c3qlujq345fmq"]

[ext_resource type="Script" path="res://Scenes/Inventory/inventory_slot.gd" id="1_ka1w6"]

[node name="InventorySlot" type="MarginContainer"]
custom_minimum_size = Vector2(70, 70)
offset_right = 38.0
offset_bottom = 33.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_ka1w6")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1

[node name="QuantityLabel" type="Label" parent="PanelContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 1
text = "x99"
horizontal_alignment = 1

[node name="SubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true

[node name="ItemHolder" type="Node2D" parent="SubViewport"]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="SubViewport"]

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
